<resources>
    <string name="app_name">Integrated Nightstand</string>
    <string name="set_alarm_interval">Set Alarm Interval</string>
    <string name="set">SET</string>
    <string name="to">to</string>
    <string name="alarm_start">Alarm Start</string>
    <string name="alarm_end">Alarm End</string>
    <string name="starry_sky">starry sky</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="view_data">View Data</string>
    <string name="set_data">SET DATA</string>
    <string name="bottom_tab">bottom tab</string>
    <string name="refresh">Refresh</string>
    <string name="clear">Clear</string>
    <string name="click_refresh_to_see_time_interval_chosen">Click Refresh to See Time Interval Chosen</string>
    <string name="time_start">Time Start</string>
    <string name="fetch">fetch</string>
    <string name="time_end">Time End</string>
    <string name="date">Date</string>
    <string name="load">load</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="cancel">Cancel</string>
    <string name="set_datetime">Set Datetime:</string>

</resources>