<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/alarmHeading"
        android:layout_width="174dp"
        android:layout_height="180dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="127dp"
        android:layout_marginTop="156dp"
        android:text="@string/set_alarm_interval"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/alarmHeading2"
        android:layout_width="69dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="182dp"
        android:layout_marginTop="376dp"
        android:text="@string/to"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/alarmSetter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="145dp"
        android:text="@string/set" />

    <Button
        android:id="@+id/alarmStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="367dp"
        android:text="@string/alarm_start" />

    <Button
        android:id="@+id/alarmEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="244dp"
        android:layout_marginTop="367dp"
        android:text="@string/alarm_end" />

</RelativeLayout>